# twc-swipe-across-the-dishes-moveit-example

./: README.md
description/hanyang_gripper/: CMakeLists.txt  package.xml
description/hanyang_gripper/config/: joint_names_Gripper_without_Gimbal_for_SolidWorks_ver1_1_URDF_(Serial).yaml
description/hanyang_gripper/launch/: display.launch  gazebo.launch
description/hanyang_gripper/meshes/: finger_1_1_link.STL  finger_1_2_link.STL  finger_2_1_link.STL  finger_2_2_link.STL  finger_hinge_1_link.STL  finger_hinge_2_link.STL  finger_hinge_3_link.STL
description/hanyang_gripper/urdf/: Gripper_without_Gimbal_for_SolidWorks_ver1_1_URDF_(Serial).csv  Gripper_without_Gimbal_for_SolidWorks_ver1_1_URDF_(Serial).urdf  gripper_simple.urdf  gripper_v1_1.urdf  gripper_v1_2.urdf  hanyang_gripper_description.urdf  urdf.rviz
description/honeycomb_table_description/: CMakeLists.txt  package.xml
description/honeycomb_table_description/launch/: display.launch
description/honeycomb_table_description/rviz/: default.rviz
twc_swipe_across_the_dishes_moveit_example/: CMakeLists.txt  package.xml
twc_swipe_across_the_dishes_moveit_example/config/: gazebo_picking.urdf  kinematics.yaml  ompl_planning.yaml  stomp_planning.yaml
twc_swipe_across_the_dishes_moveit_example/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
(+92 files in other folders)
